--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="Blue">#0C8FF3</color>
     <color name="yellow">#BDF00E</color>
+    <color name="light_yellow">#FFFFE6</color>
+    <color name="light_blue">#E6FFFF</color>
 </resources>
