now i wait for a 'W' and start my main process and color changes in recView according to result value

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="light_yellow">#FFFFE6</color>
     <color name="transparent">#80000000</color>
     <color name="light_blue">#E6FFFF</color>
+    <color name="red">#E91B0C</color>
+    <color name="green">#10C518</color>
 </resources>
