--- a/app/src/main/res/layout/fragment_getting_data_page.xml
+++ b/app/src/main/res/layout/fragment_getting_data_page.xml
@@ -25,15 +25,21 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:hint="شماره نمونه"
+        android:textColor="#0D8DF3"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
-        android:text="TextView"
+        android:layout_marginEnd="32dp"
+        android:textColor="#0C0C0C"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,10 +47,13 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="64dp"
-        android:text="TextView"
+        android:layout_marginEnd="32dp"
+        android:textColor="#0E0E0E"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
