add view of cameraX view but not its functionalities

--- a/app/src/main/res/layout/fragment_getting_data_page.xml
+++ b/app/src/main/res/layout/fragment_getting_data_page.xml
@@ -6,17 +6,19 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-    <com.otaliastudios.cameraview.CameraView
+    <androidx.camera.view.PreviewView
         android:id="@+id/camera"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
         android:layout_marginTop="64dp"
         android:keepScreenOn="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:adjustViewBounds="true"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
 
     <TextView
         android:id="@+id/countBox"
@@ -68,6 +70,15 @@
         android:hint="تاریخ و زمان"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        app:layout_constraintEnd_toStartOf="@+id/countBox"
+        app:layout_constraintStart_toEndOf="@+id/dateBox"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@tools:sample/avatars" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
