--- a/app/src/main/res/layout/listitem.xml
+++ b/app/src/main/res/layout/listitem.xml
@@ -9,38 +9,35 @@
     android:focusable="true"
     android:padding="50dp">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="@+id/secondPart"
+        app:layout_constraintStart_toStartOf="@+id/secondPart"
+        app:layout_constraintTop_toBottomOf="@+id/secondPart"
+        tools:srcCompat="@tools:sample/avatars" />
+
     <TextView
         android:id="@+id/firstPart"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:textColor="#0B0A0A"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/secondPart"
-        android:layout_width="312dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/firstPart"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/firstPart"
         app:layout_constraintTop_toBottomOf="@+id/firstPart" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/secondPart"
-        app:layout_constraintStart_toStartOf="@+id/secondPart"
-        app:layout_constraintTop_toBottomOf="@+id/secondPart"
-        tools:srcCompat="@tools:sample/avatars" />
 </androidx.constraintlayout.widget.ConstraintLayout>
