--- a/app/src/main/res/layout/listitem.xml
+++ b/app/src/main/res/layout/listitem.xml
@@ -11,8 +11,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="280dp"
+        android:layout_height="280dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="@+id/secondPart"
         app:layout_constraintStart_toStartOf="@+id/secondPart"
@@ -39,5 +39,17 @@
         app:layout_constraintEnd_toEndOf="@+id/firstPart"
         app:layout_constraintStart_toStartOf="@+id/firstPart"
         app:layout_constraintTop_toBottomOf="@+id/firstPart" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:entries="@array/colorList"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
