--- a/app/src/main/res/layout/fragment_getting_data_page.xml
+++ b/app/src/main/res/layout/fragment_getting_data_page.xml
@@ -2,48 +2,46 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <androidx.camera.view.PreviewView
         android:id="@+id/camera"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
-        android:adjustViewBounds="true"
-        android:keepScreenOn="true"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/endBTN" />
+        app:layout_constraintTop_toBottomOf="@+id/countBox" />
 
-
-    <Button
-        android:id="@+id/endBTN"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/countBox"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="End"
-        app:layout_constraintEnd_toStartOf="@+id/countBox"
+        android:layout_marginTop="16dp"
+        android:elevation="2dp"
+        android:gravity="center"
+        android:hint="شماره نمونه"
+        android:textColor="#090909"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/countBox"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/endBTN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="شماره نمونه"
-        android:textColor="#0D8DF3"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/endBTN"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        android:contentDescription="TODO"
+        android:elevation="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/endBTN"
-        app:layout_constraintTop_toTopOf="@+id/endBTN" />
-
+        app:srcCompat="@drawable/ic_baseline_done" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
