--- a/app/src/main/res/layout/listitem.xml
+++ b/app/src/main/res/layout/listitem.xml
@@ -11,45 +11,51 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="280dp"
-        android:layout_height="280dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="@+id/secondPart"
-        app:layout_constraintStart_toStartOf="@+id/secondPart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/secondPart"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/firstPart"
-        android:layout_width="0dp"
+        android:id="@+id/secondPart"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="hie"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/firstPart"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/firstPart"
+        app:layout_constraintTop_toBottomOf="@+id/firstPart" />
+
+    <TextView
+        android:id="@+id/firstPart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="hey"
         android:textColor="#0B0A0A"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpeakableTextPresentCheck" />
 
-    <TextView
-        android:id="@+id/secondPart"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/firstPart"
-        app:layout_constraintStart_toStartOf="@+id/firstPart"
-        app:layout_constraintTop_toBottomOf="@+id/firstPart" />
-
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="0dp"
+        style="@style/Widget.AppCompat.DropDownItem.Spinner"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="4dp"
+        android:backgroundTint="@color/black"
+        android:backgroundTintMode="screen"
         android:entries="@array/colorList"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/firstPart"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
