--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -9,19 +9,22 @@
         android:id="@+id/gettingDataPage"
         android:name="com.caneproject.fragment.GettingDataPage"
         android:label="fragment_getting_data_page"
-        tools:layout="@layout/fragment_getting_data_page" >
+        tools:layout="@layout/fragment_getting_data_page">
         <action
-            android:id="@+id/action_gettingDataPage_to_dataAnaliticsPage"
-            app:destination="@id/dataAnaliticsPage" />
+            android:id="@+id/action_gettingDataPage_to_initPage"
+            app:destination="@id/initPage" />
     </fragment>
     <fragment
         android:id="@+id/initPage"
         android:name="com.caneproject.fragment.InitPage"
         android:label="fragment_init_page"
-        tools:layout="@layout/fragment_init_page" >
+        tools:layout="@layout/fragment_init_page">
         <action
             android:id="@+id/action_initPage_to_gettingDataPage"
             app:destination="@id/gettingDataPage" />
+        <action
+            android:id="@+id/action_initPage_to_dataManaging"
+            app:destination="@id/dataManaging" />
     </fragment>
     <fragment
         android:id="@+id/dataAnaliticsPage"
@@ -29,8 +32,12 @@
         android:label="fragment_data_analitics_page"
         tools:layout="@layout/fragment_data_analitics_page" />
     <fragment
-        android:id="@+id/blankFragment"
-        android:name="com.caneproject.BlankFragment"
-        android:label="fragment_blank"
-        tools:layout="@layout/fragment_blank" />
+        android:id="@+id/dataManaging"
+        android:name="com.caneproject.fragment.DataManaging"
+        android:label="fragment_data_managing"
+        tools:layout="@layout/fragment_data_managing">
+        <action
+            android:id="@+id/action_dataManaging_to_dataAnaliticsPage"
+            app:destination="@id/dataAnaliticsPage" />
+    </fragment>
 </navigation>
