--- a/app/src/main/res/layout/fragment_getting_data_page.xml
+++ b/app/src/main/res/layout/fragment_getting_data_page.xml
@@ -23,7 +23,7 @@
         android:layout_marginTop="16dp"
         android:elevation="2dp"
         android:gravity="center"
-        android:hint="شماره نمونه"
+        android:hint="Wait..."
         android:textColor="#090909"
         android:textSize="20sp"
         android:textStyle="bold"
