fix problem on changing fab color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="light_blue">#E6FFFF</color>
     <color name="red">#E91B0C</color>
     <color name="green">#10C518</color>
+    <color name="lightcream">#FAF1C8</color>
 </resources>
