fix problems on run time permissions and get a stable build

--- a/app/src/main/res/layout/data_structure_in_rec_view.xml
+++ b/app/src/main/res/layout/data_structure_in_rec_view.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
-    android:padding="50dp"
+    android:padding="40dp"
     android:textAlignment="viewStart">
 
     <ImageView
@@ -49,14 +49,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="32dp"
         android:clickable="true"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.412"
         app:layout_constraintStart_toEndOf="@+id/firstPart"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.761"
         app:srcCompat="@drawable/ic_baseline_color_lens" />
 
 
