Create Camera class

--- a/app/src/main/res/layout/fragment_init_page.xml
+++ b/app/src/main/res/layout/fragment_init_page.xml
@@ -10,8 +10,8 @@
         android:id="@+id/chooseDeviceBTN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/black"
         android:text="Choose Device"
+        android:textColor="#EFE6E6"
         app:layout_constraintBottom_toTopOf="@+id/libraryBTN"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -22,8 +22,8 @@
         android:id="@+id/libraryBTN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/black"
         android:text="Data Library"
+        android:textColor="#EFE6E6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
