finish deleting rows in managing class and improve colors in UI and add check for if user not selected device before connecting

--- a/app/src/main/res/layout/data_structure_in_rec_view.xml
+++ b/app/src/main/res/layout/data_structure_in_rec_view.xml
@@ -27,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="hie"
+        android:textColor="#333030"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -70,6 +71,7 @@
         android:textAlignment="center"
         android:textColor="#4658BD"
         android:textSize="16sp"
+        android:backgroundTint="@color/light_red"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/firstPart"
