--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FF000000</color>
+    <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#0C8FF3</color>
     <color name="purple_700">#0C8FF3</color>
     <color name="teal_200">#BDF00E</color>
@@ -13,6 +13,7 @@
     <color name="transparent">#80000000</color>
     <color name="light_blue">#E6FFFF</color>
     <color name="red">#E91B0C</color>
+    <color name="light_red">#fc5f53</color>
     <color name="green">#10C518</color>
     <color name="lightcream">#FAF1C8</color>
 </resources>
