--- a/app/src/main/res/layout/fragment_data_managing.xml
+++ b/app/src/main/res/layout/fragment_data_managing.xml
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:backgroundTint="@color/purple_500"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom|right|end"
         android:layout_margin="16dp"
