now multiple images can be sent via Whatsapp

--- a/app/src/main/res/layout/fragment_data_analitics_page.xml
+++ b/app/src/main/res/layout/fragment_data_analitics_page.xml
@@ -35,4 +35,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/DateBox" />
+
+    <Button
+        android:id="@+id/sendBTN"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text="send"
+        app:layout_constraintEnd_toStartOf="@+id/userBox"
+        app:layout_constraintStart_toEndOf="@+id/DateBox"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
